Fix overflow issue in Home for mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ pre {
 #home {
     width: 30%;
     text-align: center;
+    overflow: hidden;
 }
 
 #navigation {
